[package]
name = "lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
bytes = "1.1.0"
colored = "2.0.0"
combine = "4.6.2"
jsonrpc-core = "18.0.0"
libc = "0.2.108"
lsp-types = "0.91.1"
serde = "1.0.130"
serde_json = "1.0.72"
macros = { path = "../macros" }
common = { path = "../common" }
