[package]
name = "syntax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[patch.crates-io]
tree-sitter = { path = "../../deps/tree-sitter/lib", version =  ">= 0.19, < 0.21"}

[patch."https://github.com/tree-sitter/tree-sitter"]
tree-sitter = { path = "../../deps/tree-sitter/lib", version =  ">= 0.19, < 0.21"}

[dependencies]
tree-sitter = ">= 0.19, < 0.21"
tree-sitter-highlight = {path = "../../deps/tree-sitter/highlight"}
tree-sitter-javascript = "0.20.0"
macros = { path = "../macros" }
once_cell = "1.8.0"
tree-sitter-rust = "0.19.0"

